# CustomerSegmentation

./: README.md  app.py  model.pkl  processed_data.csv  pyproject.toml  stats.json
conf/base/: catalog.yml  parameters_Clustering.yml  parameters_DataPreprocessing.yml  parameters_Evaluation.yml  parameters_PCA.yml  parameters_Testing.yml
notebooks/: eda.ipynb
src/customersegmentation/: __init__.py  __main__.py  settings.py
src/customersegmentation/pipelines/Clustering/: __init__.py  nodes.py  pipeline.py
src/customersegmentation/pipelines/DataPreprocessing/: __init__.py  nodes.py  pipeline.py
src/customersegmentation/pipelines/PCA/: __init__.py  nodes.py  pipeline.py
src/customersegmentation/pipelines/Testing/: __init__.py  nodes.py  pipeline.py
src/tests/pipelines/Clustering/: test_pipeline.py
src/tests/pipelines/DataPreprocessing/: test_pipeline.py
src/tests/pipelines/PCA/: test_pipeline.py
src/tests/pipelines/Testing/: test_pipeline.py
