[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "customersegmentation"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
customersegmentation = "customersegmentation.__main__:main"

[tool.kedro]
package_name = "customersegmentation"
project_name = "CustomerSegmentation"
kedro_init_version = "0.19.1"
tools = "[]"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "customersegmentation.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
